<resources>
    <string name="app_name">Math4Kids</string>
    <string name="texto_registro">Al momento de registrarte podrás mantenerte al tanto de los cambios realizados</string>
    <string name="f_cil">Fácil</string>
    <string name="intermedio">Intermedio</string>
    <string name="niveles_del">Niveles del</string>
    <string name="juego">juego</string>
    <string name="avanzado">Avanzado</string>
    <string name="experto">Experto</string>
    <string name="piensa">Piensa</string>
    <string name="rapido">rápido</string>
    <string name="m_s">Más</string>
    <string name="version_control">v 0.1.0</string>
    <string name="piensa_r_pido">Piensa Rápido</string>
    <string name="empieza_tu_aventura">Empieza tu aventura</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="ajustes">Ajustes</string>
    <string name="perfil">Perfil</string>
    <string name="noticias">Noticias</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="teor_a">Teoría</string>
    <string name="marca_juan">Realizado por Paul Guillen</string>
    <string name="texto_largo">Ejercita tu mente con multiplicaciones, sumas, restas y divisiones.</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="a_n_no_te_has_registrado">Aún no te has registrado?</string>
    <string name="proyecto_unviersitario_realizado_por_juan_surco">Proyecto unviersitario | Realizado por Paul Guillen</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="ya_tienes_una_cuenta">Ya tienes una cuenta?</string>
    <string name="matem_tica">Matemática</string>
    <string name="para_ni_os">para niños</string>
    <string name="segmentos_de_aprendizaje">Segmentos de aprendizaje</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="problemas_nrepresentar_ncantidades">Problemas \nrepresentar \ncantidades</string>
    <string name="redondeo_na_las_ncentenas">Redondeo \na las \ncentenas</string>
    <string name="segmento_nde_los_ndecimales">Segmento \nde los \ndecimales</string>
    <string name="comparar_nordenar_ncantidades">Comparar \nordenar \ncantidades</string>
    <string name="problemas_nde_ncomparaci_n">Problemas \nde \ncomparación</string>
    <string name="teor_a_nde_la_nmultiplicaci_n">Teoría \nde la \nmultiplicación</string>
    <string name="nivel_2">Nivel 2</string>
    <string name="pr_ctica_ncalculo_nmental">Práctica\ncalculo\nmental</string>
    <string name="gr_ficos_nde_nbarras">Gráficos \nde \nbarras</string>
    <string name="problemas_nde_nigualaci_n">Problemas \nde \nigualación</string>
    <string name="multiplos_nde_nn_meros">Multiplos \nde \nnúmeros</string>
    <string name="nivel_3">Nivel 3</string>
    <string name="interpretaci_n_nde_nlos_gr_ficos">Interpretación \nde \nlos gráficos</string>
    <string name="te_ria_nde_nfracciones">Teória \nde \nfracciones</string>
    <string name="te_ria_nde_ndivisi_n">Teória \nde \ndivisión</string>
    <string name="explicaci_n_del_juego">Explicación del juego</string>
    <string name="salir_de_la_aplicaci_n">Salir de la aplicación</string>
    <string name="te_ria_de_ncuerpos_ngeom_tricos">Teória de \ncuerpos \ngeométricos</string>
    <string name="texto_card_view">Apoya a este pequeño juego llamado Matemáticos para niños, en una futura versión tendrá mejoras visuales.</string>
    <string name="texto_exclamacion">Toda las vistas fueron desarrolladas \npor el estudiante Paul Guillen.</string>
    <string name="soporte_desarollador">Soporte desarollador</string>
    <string name="texto_mantenimiento">Mantenimiento continuo de la aplicación móvil</string>
    <string name="texto_seguro_recomendar">Cuentale a tus amigos sobre este aplicación.</string>
    <string name="matem_tica_para">Matemática para</string>
    <string name="ni_os">niños</string>
    <string name="texto_recomendar">Recomendar a un amigo</string>
    <string name="terminos">Terminos de servicio</string>
    <string name="politicas">Políticas de privacidad</string>
    <string name="titulo_noticia">Titulo noticia</string>
    <string name="descripcion_de_la_noticia">Descripcion de la noticia</string>
    <string name="fecha_de_la_noticia">Fecha de la noticia</string>
    <string name="noticias_nodata">En estos momentos no contamos con nuevas noticias que mostrar</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correoprincipal_gmail_com">correoprincipal@gmail.com</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="fecha_de_creaci_n">Última vez jugado</string>
    <string name="_5_de_may_2022">5 de may 2022</string>
    <string name="text_incognita">\?</string>
    <string name="multi_example">1 x 2 =</string>
    <string name="number_seven">7</string>
    <string name="nivel">Nivel</string>
    <string name="text_contador">30s</string>
    <string name="text_division_puntaje">0/0</string>
    <string name="best">best</string>
    <string name="mejor_puntaje_personal">Mejor puntaje personal:</string>
    <string name="score">Score</string>
    <string name="puntaje">Puntaje:</string>
    <string name="number_last_point">18</string>
    <string name="ultimo_puntaje">Ultimo puntaje</string>
    <string name="best_points">24</string>
    <string name="mejor_puntaje">Mejor puntaje</string>
    <string name="suma">Suma</string>
    <string name="resta">Resta</string>
    <string name="multiplicaci_n">Multiplicación</string>
    <string name="salir">Salir</string>
    <string name="siguiente_nivel">Siguiente nivel....</string>
    <string name="volver_nal_men">Ver Panel</string>
    <string name="divisi_n">División</string>
</resources>